# MOM_generic_tracers

./: CMakeLists.txt  gfdl-generic-tracers.pc.in
generic_tracers/: generic_WOMBAT.F90  generic_WOMBATlite.F90  generic_tracer.F90  generic_tracer_utils.F90
